--- a/about.html
+++ b/about.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Me - My Accessible Blog">
     <title>About Me - My Accessible Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Accessible Blog</h1>
+        <h1>Zoey's Archive</h1>
     </header>
     <nav aria-label="Main Navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="content-wrapper">
@@ -42,7 +44,7 @@
         </aside>
     </div>
     <footer>
-        <p>&copy; 2023 My Accessible Blog | 
+        <p>&copy; 2025 Zoey's Archive | 
             <a href="https://www.linkedin.com/in/zoeyvo/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </p>
     </footer>
