--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A WCAG 2.1 compatible responsive layout">
     <title>Responsive Layout</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
@@ -15,14 +19,15 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="content-wrapper">
         <main>
             <article>
-                <h2>Welcome to My Blog</h2>
-                <p>Hi! I am a committed and detail-oriented Computer Science and Engineering student at the University of California, Davis, passionate about solving complex problems and addressing social inequities. I am experienced in front- and back-end web development, managing database systems, and using machine learning for data-driven metric analysis. By leveraging my technical expertise, I aim to advance social justice initiatives. My focus is on using systems design and scalable web applications to create impactful, community-centered solutions.</p>
+                <h2>Welcome to My Blog!</h2>
+                <p> 
+                    under construction, check back later!
+                </p>
             </article>
         </main>
         <aside>
@@ -34,8 +39,13 @@
         </aside>
     </div>
     <footer>
-        <p>&copy; 2023 My Accessible Blog | 
-            <a href="https://www.linkedin.com/in/zoeyvo/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <p>&copy; 2025 Zoey's Archive | 
+            <a href="https://www.linkedin.com/in/zoeyvo/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-linkedin"></i> LinkedIn
+            </a> | 
+            <a href="mailto:zoeyvo256@gmail.com">
+                <i class="fas fa-envelope"></i> Email
+            </a>
         </p>
     </footer>
 </body>
