--- a/posts.html
+++ b/posts.html
@@ -16,17 +16,18 @@
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
         <h1>internet witch archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
+         
     </header>
     <div id="nav"></div>
     <div class="content-wrapper">
         <main>
             <article>
                 <div class="imgHeader">
-                    <h2>blog <img src="assets/book.gif" alt="spellbook" class="icon" height="30"></h2>
+                    <h2>news</h2>
                     <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
                 </div>
                 <p> 
-                Nothing to see here yet...
+                    under construction, check back later!
                 </p>
             </article>
         </main>
