--- a/projects.html
+++ b/projects.html
@@ -16,18 +16,21 @@
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
         <h1>internet witch archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
+         
     </header>
     <div id="nav"></div>
     <div class="content-wrapper">
         <main>
             <article>
                 <div class="imgHeader">
-                    <h2>blog <img src="assets/book.gif" alt="spellbook" class="icon" height="30"></h2>
+                    <h2>projects</h2>
                     <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
                 </div>
-                <p> 
-                Nothing to see here yet...
-                </p>
+                <h3 style="margin-top: 0;">1. Expert Mapping Interface</h3>
+
+                <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px;">
+                    <iframe src="https://expert-mapping-interface-demo-r33c7sek8-zoeyvos-projects.vercel.app/" width="100%" height="500" style="border:none;" title="EMI"></iframe>
+                </div>
             </article>
         </main>
         <div id="aside"></div>
