--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->
     </header>
     <div id="nav"></div>
-    <div class="content-wrapper">
-        <main>
+    <div class="content-wrapper" style="width: 100%;">
+        <main style="width: 100%;">
             <section>
                 <div class="about-content">
                     <h2>about me</h2>
@@ -39,16 +39,13 @@
                 </div>
             </section>
         </main>
-        <div id="aside"></div>
     </div>
     <footer id="footer"></footer>
     <script type="module">
         import Nav from './components/Nav.js';
-        import Aside from './components/Aside.js';
         import Footer from './components/Footer.js';
 
         document.getElementById('nav').innerHTML = Nav();
-        document.getElementById('aside').innerHTML = Aside();
         document.getElementById('footer').innerHTML = Footer();
     </script>
 </body>
