--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/ico" href="assets/fav.ico">
+
+    <link rel="manifest" href="/site.webmanifest">
+   
 </head>
 <body>
+    <!-- Remove the inline button, it will be added dynamically -->
     <header>
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
         <h1>internet witch archives</h1>
