context of html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A WCAG 2.1 compatible responsive layout">
+    <meta name="description" content=" zoey's personal portfolio & blog">
     <title>Responsive Layout</title>
     <link rel="stylesheet" href="styles.css">
 </head>
