--- a/about.html
+++ b/about.html
@@ -19,32 +19,30 @@
     </script>
     <header>
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
-        <h1>internet witch archives</h1>
+        <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->
     </header>
     <div id="nav"></div>
-    <div class="content-wrapper" style="width: 100%;">
-        <main style="width: 100%;">
-            <section>
-                <div class="about-content">
-                    <h2>about me</h2>
-                    <p>Hello! I'm Zoey, a passionate web developer and designer.</p>
-                    <p>
-                        Check out my resume below or feel free to reach out via email or LinkedIn!
+    <main>
+        <article>
+            <div class="about-content">
+                <h2>about me</h2>
+                <p>Hello! I'm Zoey, a passionate web developer and designer.</p>
+                <p>
+                    Check out my resume below or feel free to reach out via email or LinkedIn!
+                </p>
+                <object 
+                    data="assets/2025 Resume v1.pdf" 
+                    type="application/pdf"
+                    width="100%"
+                    height="600px">
+                    <p>Unable to display PDF file. 
+                        <a href="assets/2025 Resume v1.pdf">Download</a> instead.
                     </p>
-                    <object 
-                        data="assets/2025 Resume v1.pdf" 
-                        type="application/pdf"
-                        width="100%"
-                        height="600px">
-                        <p>Unable to display PDF file. 
-                            <a href="assets/2025 Resume v1.pdf">Download</a> instead.
-                        </p>
-                    </object>
-                </div>
-            </section>
-        </main>
-    </div>
+                </object>
+            </div>
+        </article>
+    </main>
     <footer id="footer"></footer>
     <script type="module">
         import Nav from './components/Nav.js';
