--- a/index.html
+++ b/index.html
@@ -19,25 +19,24 @@
     <!-- Remove the inline button, it will be added dynamically -->
     <header>
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
-        <h1>internet witch archives</h1>
+        <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
     </header>
     <div id="nav"></div>
-    <div class="content-wrapper">
-        <main>
-            <article>
-                <div class="imgHeader">
-                    <h2>blog <img src="assets/book.gif" alt="spellbook" class="icon" height="30"></h2>
-                    <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
-                </div>
-                <p> 
-                Nothing to see here yet...
-                </p>
-            </article>
-        </main>
-        <div id="aside"></div>
-    </div>
+    <main>
+        <article>
+            <div class="imgHeader">
+                <h2>blog <img src="assets/book.gif" alt="spellbook" class="icon" height="30"></h2>
+                <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
+            </div>
+            <p> 
+            Nothing to see here yet...
+            </p>
+        </article>
+        <div id="aside"></div> 
+    </main>
     <footer id="footer"></footer>
+
     <script type="module">
         import Nav from './components/Nav.js';
         import Aside from './components/Aside.js';
