--- a/posts.html
+++ b/posts.html
@@ -19,24 +19,20 @@
     </script>
     <header>
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
-        <h1>internet witch archives</h1>
+        <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
          
     </header>
     <div id="nav"></div>
-    <div class="content-wrapper" style="width: 100%;">
-        <main style="width: 100%;">
-            <article>
-                <div class="imgHeader">
-                    <h2>news</h2>
-                    <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
-                </div>
-                <p> 
-                    under construction, check back later!
-                </p>
-            </article>
-        </main>
-    </div>
+    <main>
+        <article>
+            <div class="imgHeader">
+                <h2>news</h2>
+                <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
+            </div>
+            <p>under construction, check back later!</p>
+        </article>
+    </main>
     <footer id="footer"></footer>
     <script type="module">
         import Nav from './components/Nav.js';
