--- a/projects.html
+++ b/projects.html
@@ -19,26 +19,24 @@
     </script>
     <header>
         <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
-        <h1>internet witch archives</h1>
+        <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
          
     </header>
     <div id="nav"></div>
-    <div class="content-wrapper" style="width: 100%;">
-        <main style="width: 100%;">
-            <article>
-                <div class="imgHeader">
-                    <h2>projects</h2>
-                    <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
-                </div>
-                <h3 style="margin-top: 0;">1. Expert Mapping Interface</h3>
+    <main>
+        <article>
+            <div class="imgHeader">
+                <h2>PROJECTS</h2>
+                <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
+            </div>
+            <h3 style="margin-top: 0;">1. Expert Mapping Interface</h3>
 
-                <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px;">
-                    <iframe src="https://expert-mapping-interface-demo-r33c7sek8-zoeyvos-projects.vercel.app/" width="100%" height="500" style="border:none;" title="EMI"></iframe>
-                </div>
-            </article>
-        </main>
-    </div>
+            <div style="border: 2px solid #ccc; padding: 10px; margin-bottom: 20px;">
+                <iframe src="https://expert-mapping-interface-demo-r33c7sek8-zoeyvos-projects.vercel.app/" width="100%" height="500" style="border:none;" title="EMI"></iframe>
+            </div>
+        </article>
+    </main>
     <footer id="footer"></footer>
     <script type="module">
         import Nav from './components/Nav.js';
