--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         document.body.appendChild(themeToggle);
     </script>
     <header>
-        <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
+        <img src="assets/book.gif" alt="spellbook" class="icon" height="50">
         <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->
     </header>
@@ -26,7 +26,7 @@
     <main>
         <article>
             <div class="about-content">
-                <h2>about me</h2>
+                <h2>ABOUT ME</h2>
                 <p>Hello! I'm Zoey, a passionate web developer and designer.</p>
                 <p>
                     Check out my resume below or feel free to reach out via email or LinkedIn!
