--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
 <body>
     <!-- Remove the inline button, it will be added dynamically -->
     <header>
-        <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
+        <img src="assets/book.gif" alt="spellbook" class="icon" height="50">
         <h1>zoey's archives</h1>
-        <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
     </header>
     <div id="nav"></div>
     <main>
         <article>
             <div class="imgHeader">
-                <h2>blog <img src="assets/book.gif" alt="spellbook" class="icon" height="30"></h2>
-                <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
+                <h2>BLOG</h2>
             </div>
             <p> 
             Nothing to see here yet...
