--- a/posts.html
+++ b/posts.html
@@ -18,7 +18,7 @@
         document.body.appendChild(themeToggle);
     </script>
     <header>
-        <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
+        <img src="assets/book.gif" alt="spellbook" class="icon" height="50">
         <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
          
@@ -27,7 +27,7 @@
     <main>
         <article>
             <div class="imgHeader">
-                <h2>news</h2>
+                <h2>NEWS</h2>
                 <!-- CC: https://www.pinterest.com/pin/8444318045427986/ -->
             </div>
             <p>under construction, check back later!</p>
