--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         document.body.appendChild(themeToggle);
     </script>
     <header>
-        <img src="assets/icon.gif" alt="cute bear" class="icon" height="50">
+        <img src="assets/book.gif" alt="spellbook" class="icon" height="50">
         <h1>zoey's archives</h1>
         <!-- CC: https://www.pinterest.com/pin/532902568423818483/ -->  
          
